# ai-maze-search-algorithms

./: AStar.cpp  AStar.h  Backtracking.cpp  Backtracking.h  Breadth.cpp  Breadth.h  CMakeLists.txt  Depth.cpp  Depth.h  Greedy.cpp  Greedy.h  IDAStar.cpp  IDAStar.h  Maze.cpp  Maze.h  Node.cpp  Node.h  Ordered.cpp  Ordered.h  OrderedEdgeStruct.h  README.md  SearchAlgorithm.cpp  SearchAlgorithm.h  Statistics.cpp  Statistics.h  Utils.cpp  Utils.h  main.cpp
instances/: instance10_10_1.in  instance10_10_2.in  instance10_10_3.in  instance10_10_4.in  instance_30_30_0_899.in
